Grace/tests/gibbs/errors/t288.grace
// ERROR = P1018
match(true)
    else (.)
